--- a/main.css
+++ b/main.css
@@ -12,3 +12,11 @@
     color: #fff;
     text-align: center;
 }
+
+.footer {
+    background-color: lightgray;
+    padding: 100px;
+    font-size: 38px;
+    color: #fff;
+    text-align: center;
+}
